  Now, instead of the buffer creating code always creating output buffers of 
  length 8192 bytes, they create output buffers of length *OUTPUT-BUFFER-SIZE* 
  bytes.

o GCONTEXT-CACHE-P, COLORMAP-PLIST and CURSOR-PLIST have been exported.

o If CREATE-GCONTEXT is given a rect-seq as a clip-mask, then a
  SetClipRectangles request must be sent to initialize the clip-mask.  The logic
  to do this is located in FORCE-GCONTEXT-CHANGES-INTERNAL, but this wasn't
  being called because create-gcontext always forces local/server-state
  timestamps equal.  Same problem for dash lists.  CREATE-GCONTEXT has been
  fixed so that in these cases it makes the timestamps unequal so that
  FORCE-GCONTEXT-CHANGES-INTERNAL is called.

o ANGLEP type check sped up for excl.  Arc drawing should be lots faster.

o RATIONAL type definition for kcl now takes the correct optional args.

o (SETF FONT-PATH) changed to return the value

o Fixed typo in the hex parsing in READ-BITMAP-FILE

o Made READ-RESOURCES more robust about weird resource files.

o New variable *DEF-CLX-CLASS-USE-DEFCLASS*, which controls whether DEF-CLX-CLASS
  uses DEFCLASS.  If it is a list, it is interpreted by DEF-CLX-CLASS to be a list
  of type names for which DEFCLASS should be used.  If it is not a list, DEFCLASS
  is always used.  IF it is NIL, DEFCLASS is never used, since NIL is the empty
  list.  By default, it's T in Genera, NIL otherwise.

o Fixed typo in DEFINE-CONDITION for #-(or lispm clx-ansi-common-lisp excl lcl3.0).

o Fixed typo in MERGE-RESOURCES 

o In Lucid lisp, the functions aref-card8, aref-int8, aset-card8, aset-int8,
  aref-card16, aref-int16, aref-card32, aref-int32, aref-card29, aset-card16,
  aset-int16, aset-card32, aset-int32, and aset-card29 Have been fixed so that
  they can be used inline with the development compiler.

o The default value of the BYTE-LSB-FIRST-P argument to CREATE-IMAGE has been
  changed from always T to T on LSBFirst machines and NIL on MSBFirst machines.